# m1-core

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-30-m1-core-v1.md  2026-05-31-m1-core-v2.md
docs/superpowers/specs/: 2026-05-30-m1-core-v1-design.md  2026-05-31-m1-core-v2-design.md
src/: annotation.rs  cst.rs  diagnostic.rs  field.rs  kind.rs  kind_pred.rs  lib.rs  syntax.rs
src/annotation/: args.rs  mod.rs
tests/: corpus.rs  public_api.rs
xtask/: Cargo.toml
xtask/src/: main.rs
