[workspace]
members = ["xtask"]

[package]
name = "m1-core"
version = "0.8.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Shared CST helpers, symbol model, and diagnostics for the MoTeC M1 script language"
publish = false

[dependencies]
tree-sitter = "0.26"
tree-sitter-m1 = { git = "https://github.com/C-Nucifora/tree-sitter-m1.git", tag = "v0.5.0" }
